# Travistest

./: .codecov.yml  .travis.yml  CMakeLists.txt  README.md
inc/: classA.hpp
src/: classA.cpp  main.cpp
test/: ClassATests.cpp
